--- a/index.html
+++ b/index.html
@@ -4,25 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VueJS + Axios</title>
-    <link rel="stylesheet" href="./style.css">
-    <!-- Importo Vue.js -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css"
+        integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--                Importo VUE.JS             --> 
     <script src="https://unpkg.com/vue@3.4.27/dist/vue.global.js"></script>
-    <!-- Importo Axios -->
+
+    <!--                Importo AXIOS         -->
     <script src="https://unpkg.com/axios@1.6.8/dist/axios.min.js"></script>
+
+    <title>VUE EMAIL LIST</title>
 </head>
 
 <body>
-
+    
     <div id="app">
-
         
-
+        <div class="text-center">
+            <input class="w-25 p-1 mx-1" type="number" name="numero" placeholder="Quante mail vuoi generare?" v-model="userInput">
+            <button type="button" class="btn btn-outline-success p-1 align-baseline" @click="randomMail()">Genera</button>
+        </div>
+        <ul class="p-3 list-group align-items-center">
+            <li v-for="element, i in arrayMail" v-if="arrayMail.length == userInput" class="w-50 p-2 text-center list-group-item">
+                {{ element }} 
+            </li>
+        </ul>
     </div>
 
-    <!-- Importo il mio JS per gestire l'istanza Vue -->
-    <script src="main.js"></script>
-
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
